--- a/packages/angular/package.json
+++ b/packages/angular/package.json
@@ -3,17 +3,28 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/renansouz/eslint-config-rss.git"
+  },
   "peerDependencies": {
     "eslint": "^8.0.0",
     "typescript": ">=5.0.0",
-    "@angular/core": "*"  
+    "@angular/core": "*",
+    "@angular-eslint/builder": "^17.0.0"
+  },
+  "peerDependenciesMeta": {
+    "typescript": {
+      "optional": true
+    }
   },
   "dependencies": {
-    "@angular-eslint/eslint-plugin": "^15.0.0",
-    "@angular-eslint/template-parser": "^15.0.0",
-    "@typescript-eslint/parser": "^6.21.0",
+    "@angular-eslint/eslint-plugin": "^17.0.0",
+    "@angular-eslint/eslint-plugin-template": "^17.0.0",
+    "@angular-eslint/template-parser": "^17.0.0",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "eslint-config-standard": "^17.1.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "prettier": "^3.2.5"
