--- a/packages/next/package.json
+++ b/packages/next/package.json
@@ -3,17 +3,29 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/renansouz/eslint-config-rss.git"
+  },
   "peerDependencies": {
     "eslint": "^8.0.0",
     "typescript": ">=5.0.0",
-    "next": "*"          
+    "next": "*"
+  },
+  "peerDependenciesMeta": {
+    "typescript": {
+      "optional": true
+    }
   },
   "dependencies": {
-    "@typescript-eslint/parser": "^6.21.0",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "eslint-config-standard": "^17.1.0",
+    "@typescript-eslint/parser": "^6.21.0",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-promise": "^6.1.1",
     "prettier": "^3.2.5"
   }
 }
